// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM should display a loading icon while filtering and display the results after filtering 1`] = `
<div
  className="courseSearch"
>
  <AutoComplete
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    animated={true}
    dataSource={Array []}
    dataSourceConfig={
      Object {
        "text": "text",
        "value": "value",
      }
    }
    disableFocusRipple={true}
    filter={[Function]}
    floatingLabelText="Course search by course code"
    fullWidth={false}
    hintText="e.g. comp 248"
    id="courseSearch"
    listStyle={
      Object {
        "maxHeight": "250px",
        "overflow": "auto",
      }
    }
    menuCloseDelay={300}
    onNewRequest={[Function]}
    onUpdateInput={[Function]}
    open={false}
    openOnFocus={false}
    style={
      Object {
        "marginLeft": "12px",
      }
    }
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
  />
</div>
`;

exports[`DOM should display a loading icon while filtering and display the results after filtering 2`] = `
<div
  className="courseSearch"
>
  <AutoComplete
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    animated={true}
    dataSource={Array []}
    dataSourceConfig={
      Object {
        "text": "text",
        "value": "value",
      }
    }
    disableFocusRipple={true}
    filter={[Function]}
    floatingLabelText="Course search by course code"
    fullWidth={false}
    hintText="e.g. comp 248"
    id="courseSearch"
    listStyle={
      Object {
        "maxHeight": "250px",
        "overflow": "auto",
      }
    }
    menuCloseDelay={300}
    onNewRequest={[Function]}
    onUpdateInput={[Function]}
    open={false}
    openOnFocus={false}
    style={
      Object {
        "marginLeft": "12px",
      }
    }
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
  />
  <CircularProgress
    max={100}
    min={0}
    mode="indeterminate"
    size={25}
    thickness={2.5}
    value={0}
  />
</div>
`;

exports[`DOM should display a loading icon while filtering and display the results after filtering 3`] = `
<div
  className="courseSearch"
>
  <AutoComplete
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    animated={true}
    dataSource={
      Array [
        Object {
          "text": "COMM 210",
          "value": "COMM 210",
        },
        Object {
          "text": "COMM 222",
          "value": "COMM 222",
        },
        Object {
          "text": "COMM 223",
          "value": "COMM 223",
        },
        Object {
          "text": "COMM 225",
          "value": "COMM 225",
        },
        Object {
          "text": "COMM 308",
          "value": "COMM 308",
        },
        Object {
          "text": "COMP 108",
          "value": "COMP 108",
        },
        Object {
          "text": "COMP 201",
          "value": "COMP 201",
        },
        Object {
          "text": "COMP 208",
          "value": "COMP 208",
        },
        Object {
          "text": "COMP 218",
          "value": "COMP 218",
        },
        Object {
          "text": "COMP 228",
          "value": "COMP 228",
        },
        Object {
          "text": "COMP 232",
          "value": "COMP 232",
        },
        Object {
          "text": "COMP 233",
          "value": "COMP 233",
        },
        Object {
          "text": "COMP 248",
          "value": "COMP 248",
        },
        Object {
          "text": "COMP 249",
          "value": "COMP 249",
        },
        Object {
          "text": "COMP 326",
          "value": "COMP 326",
        },
        Object {
          "text": "COMP 335",
          "value": "COMP 335",
        },
        Object {
          "text": "COMP 339",
          "value": "COMP 339",
        },
        Object {
          "text": "COMP 345",
          "value": "COMP 345",
        },
        Object {
          "text": "COMP 346",
          "value": "COMP 346",
        },
        Object {
          "text": "COMP 348",
          "value": "COMP 348",
        },
        Object {
          "text": "COMP 352",
          "value": "COMP 352",
        },
        Object {
          "text": "COMP 353",
          "value": "COMP 353",
        },
        Object {
          "text": "COMP 354",
          "value": "COMP 354",
        },
        Object {
          "text": "COMP 361",
          "value": "COMP 361",
        },
        Object {
          "text": "COMP 367",
          "value": "COMP 367",
        },
      ]
    }
    dataSourceConfig={
      Object {
        "text": "text",
        "value": "value",
      }
    }
    disableFocusRipple={true}
    filter={[Function]}
    floatingLabelText="Course search by course code"
    fullWidth={false}
    hintText="e.g. comp 248"
    id="courseSearch"
    listStyle={
      Object {
        "maxHeight": "250px",
        "overflow": "auto",
      }
    }
    menuCloseDelay={300}
    onNewRequest={[Function]}
    onUpdateInput={[Function]}
    open={false}
    openOnFocus={false}
    style={
      Object {
        "marginLeft": "12px",
      }
    }
    targetOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
  />
</div>
`;
